# MathPackagesTraining2023

./: .gitignore  README.md  _config.yml  _config_dev.yml  marks_notes.txt
_data/: agenda.yml  authors.yml  navigation.yml  pathways.yml  socialmedia.yml  vrooms.yml
_includes/: agenda  link-shortcuts
_layouts/: package.html  page-fullwidth.html
_lessons/: index.md
_lessons/amrex/: lesson.md
_lessons/hand_coded_heat/: lesson.md
_lessons/krylov_amg_hypre/: lesson.md
_lessons/krylov_amg_muelu/: lesson.md
_lessons/mfem_convergence/: lesson.md
_lessons/multidim_rosenbrock_tao/: lesson.md  multidim_rosenbrock  multidim_rosenbrock.c
_lessons/nonlinear_solvers_petsc/: lesson.md
_lessons/numerical_optimization_tao/: 2d_rosenbrock_plot.py  lesson.md  makefile  multidim_rosenbrock  multidim_rosenbrock.c
_lessons/pumi/: lesson.md
_lessons/strumpack/: lesson.md
_lessons/strumpack/rank_structured_strumpack/: CMakeLists.txt  README  build.sh  demo_run.sh  testPoisson3dMPIDist.cpp
_lessons/superlu_dist/: lesson.md
_lessons/superlu_mfem/: lesson.md
_lessons/time_integrators_sundials/: lesson.md
_lessons_old/: index.md
_lessons_old/hand_coded_heat/: lesson.md
_lessons_old/krylov_amg_hypre/: lesson.md
_lessons_old/krylov_amg_muelu/: lesson.md
_lessons_old/lesson_template/: lesson.md
_packages/: index.md
pages/: agenda.md  aurora.md  breakout-room.md  contribution_guide.md  frontier.md  getting-help.md  main-room.md  presenters.md  session_synopses.md  setup_instructions.md  speed_date.py  vip_talks.md  virtual_rooms.md
(+31 files in other folders)
